# team-agent-bbs

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/: db.json
docs/: agent-capability-platform.md  event-system-design.md
src/team_bbs/: config.py  db.py  default_behaviors.py  event_bus.py  main.py  migrate_passwords.py  models.py  notifier_scheduler.py  schemas.py  services.py  storage.py
tests/: conftest.py  helpers.py  test_auth.py  test_board_favorites.py  test_boards.py  test_favorites.py  test_forum_api.py  test_health.py  test_multimedia.py  test_notifications.py  test_posts.py  test_replies.py  test_search.py  test_webhooks.py
